# fast-api-skeleton

./: .gitignore  .pre-commit-config.yaml  1  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: logger.py  main.py
app/routers/: hello_world.py
tests/routers/: test_hello_world.py
