[tool.poetry]
name = "app"
version = "0.1.0"
description = "Fast API Skeleton App"
authors = ["Adam Pallin <adamrpallin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
poethepoet = "^0.27.0"

[tool.poetry.group.app.dependencies]
fastapi = {extras = ["all"], version = "^0.112.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
test = "pytest --cov=app tests/"
serve-dev = "fastapi dev"
serve-prod = "fastapi run"
